--- a/build.yaml
+++ b/build.yaml
@@ -18,3 +18,7 @@
 #     artifact-name: corne_left_with_studio
 #
 ---
+include:
+  - board: mona60
+    shield: nhkb
+    snippet: studio-rpc-usb-uart
