--- a/boards/arm/mona60/mona60.dtsi
+++ b/boards/arm/mona60/mona60.dtsi
@@ -5,7 +5,7 @@
  */
 
 #include <nordic/nrf52840_qiaa.dtsi>
-#include "nice_nano-pinctrl.dtsi"
+#include "mona60-pinctrl.dtsi"
 #include "arduino_pro_micro_pins.dtsi"
 
 / {
