--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -2,7 +2,7 @@
 
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
-CONFIG_BOARD_NICE_NANO_V2=y
+CONFIG_BOARD_MONA60=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
