--- a/boards/arm/mona60/mona60-pinctrl.dtsi
+++ b/boards/arm/mona60/mona60-pinctrl.dtsi
@@ -48,4 +48,18 @@
             low-power-enable;
         };
     };
+
+    spi3_default: spi3_default {
+        group1 {
+            psels = <NRF_PSEL(SPIM_MOSI, 0, 31)>;
+        };
+    };
+
+    spi3_sleep: spi3_sleep {
+        group1 {
+            psels = <NRF_PSEL(SPIM_MOSI, 0, 31)>;
+            low-power-enable;
+        };
+    };
+    
 };
