--- a/boards/arm/mona60/mona60.dtsi
+++ b/boards/arm/mona60/mona60.dtsi
@@ -7,6 +7,7 @@
 #include <nordic/nrf52840_qiaa.dtsi>
 #include "mona60-pinctrl.dtsi"
 #include "arduino_pro_micro_pins.dtsi"
+#include <dt-bindings/led/led.h>
 
 / {
     model = "mona60";
