--- a/boards/arm/mona60/mona60.dts
+++ b/boards/arm/mona60/mona60.dts
@@ -9,11 +9,12 @@
     // Node name must match original "EXT_POWER" label to preserve user settings.
     EXT_POWER {
         compatible = "zmk,ext-power-generic";
-        control-gpios = <&gpio0 13 GPIO_ACTIVE_HIGH>;
-        init-delay-ms = <50>;
+        control-gpios = <&gpio0 29 GPIO_ACTIVE_LOW>;
     };
-
     vbatt: vbatt {
-        compatible = "zmk,battery-nrf-vddh";
+        compatible = "zmk,battery-voltage-divider";
+        io-channels = <&adc 2>;
+        output-ohms = <2000000>;
+        full-ohms = <(2000000 + 806000)>;
     };
 };
