--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -25,3 +25,14 @@ CONFIG_FLASH_MAP=y
 
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_USB=y
+
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+
+CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
+CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
