--- a/boards/arm/mona60/mona60.dts
+++ b/boards/arm/mona60/mona60.dts
@@ -4,6 +4,8 @@
 / {
     chosen {
         zmk,battery = &vbatt;
+        zmk,underglow = &led_strip;
+        zephyr,display = &oled;
     };
 
     // Node name must match original "EXT_POWER" label to preserve user settings.
