--- a/boards/arm/mona60/mona60.dts
+++ b/boards/arm/mona60/mona60.dts
@@ -19,4 +19,50 @@
         output-ohms = <2000000>;
         full-ohms = <(2000000 + 806000)>;
     };
+    i2c0: i2c0 {
+        compatible = "nordic,nrf-twi";
+        pinctrl-0 = <&i2c0_default>;
+        pinctrl-1 = <&i2c0_sleep>;
+        pinctrl-names = "default", "sleep";
+        status = "okay";
+
+        oled: ssd1306@3c {
+            compatible = "solomon,ssd1306fb";
+            reg = <0x3c>;
+            width = <128>;
+            height = <32>;
+            segment-offset = <0>;
+            page-offset = <0>;
+            display-offset = <0>;
+            multiplex-ratio = <31>;
+            segment-remap;
+            com-invdir;
+            com-sequential;
+            inversion-on;
+            prechargep = <0x22>;
+        };
+    };
+
+    spi3: spi3 {
+        compatible = "nordic,nrf-spim";
+
+        pinctrl-0 = <&spi3_default>;
+        pinctrl-1 = <&spi3_sleep>;
+        pinctrl-names = "default", "sleep";
+        status = "okay";
+
+        led_strip: ws2812@0 {
+            compatible = "worldsemi,ws2812-spi";
+
+            /* SPI */
+            reg = <0>; /* ignored, but necessary for SPI bindings */
+            spi-max-frequency = <4000000>;
+
+            /* WS2812 */
+            chain-length = <2>; /* LED strip length */
+            spi-one-frame = <0x70>;
+            spi-zero-frame = <0x40>;
+            color-mapping = <LED_COLOR_ID_GREEN LED_COLOR_ID_RED LED_COLOR_ID_BLUE>;
+        };
+    };
 };
