--- a/build.yaml
+++ b/build.yaml
@@ -20,5 +20,5 @@
 ---
 include:
   - board: mona60
-    shield: nhkb
-    snippet: studio-rpc-usb-uart
+#    shield: nhkb
+#    snippet: studio-rpc-usb-uart
