--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -28,6 +28,7 @@ CONFIG_ZMK_USB=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_SETTINGS_RESET_ON_START=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
