--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -23,13 +23,13 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
-CONFIG_ZMK_BLE=n
-CONFIG_BT=y
+CONFIG_ZMK_BLE=y
 CONFIG_ZMK_USB=y
 
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_SETTINGS_RESET_ON_START=y
-# CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
+CONFIG_ZMK_KEYBOARD_NAME=MONA60
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 
