--- a/boards/arm/mona60/Kconfig
+++ b/boards/arm/mona60/Kconfig
@@ -3,10 +3,10 @@ config BOARD_ENABLE_DCDC
     bool "Enable DCDC mode"
     select SOC_DCDC_NRF52X
     default y
-    depends on MONA60
+    depends on BOARD_MONA60
 
 config BOARD_ENABLE_DCDC_HV
     bool "High voltage DCDC converter"
     select SOC_DCDC_NRF52X_HV
     default y
-    depends on MONA60
+    depends on BOARD_MONA60
