--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,19 @@
 #
 ---
 include:
-  - board: mona60
+#  - board: mona60
 #    shield: nhkb
-    snippet: studio-rpc-usb-uart
+#    snippet: studio-rpc-usb-uart
+
+
+# -----------------------------------------
+  # Your other keyboard parts here
+  # -----------------------------------------
+  # Change the board appropriately, you can use any board
+  - board: nice_nano_v2
+    shield: mona60_dongle
+  - board: nice_nano_v2
+    shield: settings_reset
+  # Add these cmake-args to the peripherals you wish to use with the dongle
+  - board: mona60
+    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
