--- a/build.yaml
+++ b/build.yaml
@@ -28,7 +28,7 @@ include:
   # Your other keyboard parts here
   # -----------------------------------------
   # Change the board appropriately, you can use any board
-  - board: nice_nano_v2
+  - board: mona60
     shield: mona60_dongle
   - board: nice_nano_v2
     shield: settings_reset
