--- a/build.yaml
+++ b/build.yaml
@@ -30,8 +30,9 @@ include:
   # Change the board appropriately, you can use any board
   - board: mona60
     shield: mona60_dongle
-  - board: nice_nano_v2
+  - board: mona60
     shield: settings_reset
   # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: mona60
+    snippet: studio-rpc-usb-uart
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
