--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -23,8 +23,8 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
-CONFIG_ZMK_BLE=n
-CONFIG_ZMK_USB=n
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_USB=y
 
 CONFIG_ZMK_STUDIO=y
 #CONFIG_ZMK_SETTINGS_RESET_ON_START=y
