--- a/build.yaml
+++ b/build.yaml
@@ -35,4 +35,4 @@ include:
   # Add these cmake-args to the peripherals you wish to use with the dongle
   - board: mona60
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+#    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
