--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -41,3 +41,6 @@ CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
+
+# mouse Emulation
+CONFIG_ZMK_POINTING=y
