--- a/build.yaml
+++ b/build.yaml
@@ -30,13 +30,13 @@ include:
   # Change the board appropriately, you can use any board
   - board: nice_nano_v2
     shield: mona60_dongle
-  - board: nice_nano_v2
-    shield: settings_reset
-  - board: mona60
-    shield: settings_reset
+  #- board: nice_nano_v2
+  #  shield: settings_reset
+  #- board: mona60
+  #  shield: settings_reset
     
     # cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   # Add these cmake-args to the peripherals you wish to use with the dongle
-  - board: mona60
+  #- board: mona60
   #  snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
+  #  cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
