--- a/boards/arm/mona60/mona60_defconfig
+++ b/boards/arm/mona60/mona60_defconfig
@@ -26,12 +26,12 @@ CONFIG_FLASH_MAP=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_USB=y
 
-CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO=y
 # CONFIG_ZMK_SETTINGS_RESET_ON_START=y
 # CONFIG_ZMK_BLE_CLEAR_BONDS_ON_START=y
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_WIDGET_WPM_STATUS=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+# CONFIG_ZMK_STUDIO_LOCKING=n
 
 CONFIG_ZMK_RGB_UNDERGLOW=y
 CONFIG_WS2812_STRIP=y
