--- a/build.yaml
+++ b/build.yaml
@@ -30,6 +30,8 @@ include:
   # Change the board appropriately, you can use any board
   - board: mona60
     shield: mona60_dongle
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y 
   - board: nice_nano_v2
     shield: settings_reset
   - board: mona60
