--- a/build.yaml
+++ b/build.yaml
@@ -31,7 +31,7 @@ include:
   - board: mona60
     shield: mona60_dongle
     snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y 
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
   - board: nice_nano_v2
     shield: settings_reset
   - board: mona60
